[package]
name = "linexus-orch"
version = "0.1.0"
edition = "2024"
authors = ["Linexus Collective"]
description = "Orchestrator — Demand/Supply engine, DAG planner, labor routing, KPI rebalancing"
license = "MIT"
repository = "https://github.com/chuckles-the-dancing-clown91/linexus-orch"

[dependencies]
linexus-core = { git = "https://github.com/chuckles-the-dancing-clown91/linexus-core.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
tonic = "0.13"
axum = { version = "0.8" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
